Tryied to make smth

--- a/Marico/styles/css/style.css
+++ b/Marico/styles/css/style.css
@@ -115,6 +115,12 @@ body {
 	border: 0;
 }
 
+.intro__icon{
+	margin: 0;
+	padding: 0;
+	display: none;
+}
+
 .intro__online{
 	display: flex;
 	align-items: center;
